--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ html {
 body {
     background-image: url(images/pexels-jéshoots-234527.jpg);
     background-repeat: no-repeat;
-    background-size: 300%;
-    background-position: -300px 100px;
+    background-size: 760%;
+    background-position: -300px 40px;
     
 }
 
@@ -44,7 +44,7 @@ label.logo {
     font-size:40px;
     text-transform: uppercase;
     font-weight: bolder;
-    padding: 0 10px;
+    padding: 0 0x;
     transition: all 0.3s ease 0s;
 }
 
@@ -63,7 +63,7 @@ label.logo {
 }
 
 ul li a {
-    margin: 0 28px;
+    margin: 0 10px;
     color: #CBE4DE;
     text-transform: uppercase;
 }
@@ -77,7 +77,7 @@ picture {
     background-color: rgb(14, 131, 136, 0.3);
     scale: 60%;
     position: relative;
-    top: 100px;
+    top: 150px;
 }
 
 .text {
@@ -88,7 +88,7 @@ picture {
     justify-content: center;
     align-items: center;
     position: relative;
-    top: 100px;
+    top: 150px;
     padding: 10px 0px;
 }
 
@@ -106,7 +106,7 @@ p {
     
     justify-content: center;
     position: relative;
-    top: 120px;
+    top: 200px;
 
 
 }
