--- a/about-page/styles.css
+++ b/about-page/styles.css
@@ -13,10 +13,10 @@ html {
 }
 
 body {
-    background-image: url(images/pexels-jéshoots-234527.jpg);
+    background-image: url(../images/pexels-jéshoots-234527.jpg); 
     background-repeat: no-repeat;
-    background-size: 760%;
-    background-position: -300px 40px;
+    background-size: 460%;
+    background-position: -580px 100px;
     
 }
 
@@ -25,6 +25,7 @@ header {
     position: fixed;
     z-index: 12;
     width: 100%;
+    
 
 }
 
@@ -68,66 +69,42 @@ ul li a {
     text-transform: uppercase;
 }
 
-.home {
+#about {
     color:#865DFF;
 }
-/* end of header */
 
-/* Hero */
-picture {
-    display: flex;
-    justify-content: center;
-    clip-path: circle();
-    background-color: rgb(14, 131, 136, 0.3);
-    scale: 60%;
-    position: relative;
-    top: 150px;
-}
+/* Section */
 
-.text {
-    
+.title-container {
     width: 100%;
     height: auto;
+    
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    
+}
+
+.title {
+    color: #CBE4DE;
+}
+
+.art-container {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    top: 150px;
-    padding: 10px 0px;
-}
-
-p {
+    margin-top: 30px;
+    padding: 0px 20px;
+    color:#CBE4DE;
     font-size: 20px;
-    color: #CBE4DE;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
 
-}
-
-/* Footer */
-.btn-container {
-    display: flex;
-    
-    justify-content: center;
     position: relative;
     top: 200px;
-
-
+    
 }
 
-.btn {
-    color:#ebf3f1;
-    background-color: #0E8388;
-    border-radius: 20px;
-    padding: 5px;
-    font-size: 25px;
-    /* outline: 5px solid green; */
+.paragraph {
     font-family: 'Montserrat', sans-serif;
+    
 }
-
-/* Tablet Screens */
-@media screen and (min-width: 481px) and (max-width: 960px)
-
-
-
-
