--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     background-repeat: no-repeat;
     background-size: 660%;
     background-position-y: 100px;
-    height: 100%;
+    
 
     
 }
@@ -85,9 +85,9 @@ ul li a:hover {
 .main {
     
     display: grid;
-    grid-template-columns: 1 fr;
+    grid-template-columns: 1fr;
     justify-content: center;
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     width: 100vw;
     align-items: center;
     height:fit-content;
@@ -122,11 +122,18 @@ ul li a:hover {
 
     position: relative;
     bottom: 110px;
+
+    transition: all 0.3s ease 0s;
+}
+
+.text:hover {
+    color: #865DFF;
 }
 
 .text .uis {
     font-size: xx-large;
     margin-bottom: 10px;
+    
 }
 
 .sub {
@@ -151,12 +158,15 @@ ul li a:hover {
     font-family: sans-serif;
     padding: 5px;
     border-radius: 15px;
-
-
-    position: relative;
-    bottom: 300px;
+    transition: all 0.3s ease 0s;
+    margin-top: 1em;
     
-    
+}
+
+.resume:hover {
+    padding: 10px;
+    background-color:#865DFF;
+
 }
 
 footer {
@@ -189,7 +199,12 @@ form {
     max-width: 600px;
     border-radius: 10px;
     
+    position: relative;
+    top: 30px;
 }
+
+ 
+
 
 form h3 {
     color: #CBE4DE;
@@ -198,15 +213,37 @@ form h3 {
 .video-container {
     display: flex;
     justify-content: center;
-    
+    align-items: center;
+    width: 100%;
+    height: 100%;
     position: relative;
-    bottom: 250px;
+    bottom: 200px;
 
 }
 
-# Tablet
-@media screen and (min-width: 768px) {
-    .main {
-        grid-template-columns: 2 fr;
+/* Tablet Reso */
+@media only screen and (min-width: 768px) and (max-width: 990px) {
+    .dp {
+        scale: 100%;
+    }
+}
+
+@media only screen and (min-width: 991px) {
+    .dp {
+        scale: 120%;
+    }
+
+    .text {
+        scale: 120%;
+    }
+
+    
+
+    .video-container {
+        scale: 80%;
+    }
+
+    footer {
+        
     }
 }
