--- a/about-page/styles.css
+++ b/about-page/styles.css
@@ -49,6 +49,11 @@ label.logo {
     transition: all 0.3s ease 0s;
 }
 
+label.logo:hover {
+    font-size: 45px;
+    color:#865DFF;
+}
+
 .menu-container {
     width: 100%;
     height: 30px;
@@ -67,6 +72,11 @@ ul li a {
     margin: 0 10px;
     color: #CBE4DE;
     text-transform: uppercase;
+    transition: all 0.3s ease 0s;
+}
+
+ul li a:hover {
+    color:#865DFF
 }
 
 #about {
@@ -90,6 +100,13 @@ ul li a {
 
 .title {
     color: #CBE4DE;
+    font-size: 3em;
+    transition: all 0.3s ease 0s;
+}
+
+.title:hover {
+    color: deepskyblue;
+    font-size: 4em;
 }
 
 .art-container {
@@ -102,12 +119,18 @@ ul li a {
     font-size: 20px;
     position: relative;
     top: 60px;
+    transition: all 0.3s ease 0s;
     
 }
 
 .paragraph {
     font-family: 'Montserrat', sans-serif;
+    transition: all 0.3s ease 0s;
     
+}
+
+.art-container:hover {
+    color: #865DFF;
 }
 
 /* content */
