--- a/Skills/styles.css
+++ b/Skills/styles.css
@@ -49,6 +49,11 @@ label.logo {
     transition: all 0.3s ease 0s;
 }
 
+label.logo:hover {
+    font-size: 45px;
+    color:#865DFF;
+}
+
 .menu-container {
     width: 100%;
     height: 30px;
@@ -93,8 +98,14 @@ ul li a:hover {
     align-items: center;
     position: relative;
     top: 10em;
-    
-    
+}
+
+.title-container h2{
+    color: #865DFF;
+    transition: all 0.3s ease 0s;
+}
+.title-container h2:hover {
+    color: #CBE4DE;;
 }
 
 h2 {
@@ -174,6 +185,12 @@ footer .social-icons ul li{
 .featured {
     font-size: 5em;
     text-align: center;
+    color: #CBE4DE;
+    transition: all 0.3s ease 0s;
+}
+
+.featured:hover {
+    color: #865DFF;
 }
 
 .title {
@@ -184,21 +201,27 @@ footer .social-icons ul li{
 }
 
 .rowmaker {
-    background-color: red;
+    
     width: 100vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 5em;
 }
-.subitem1,
-.subitem2,
-.subitem3 {
-    width: 15em;
-    height: 15em;
-    background-color: blue;
+.subitem {
+    width: 40em;
+    height: 20em;
+    background-color: whitesmoke;
+    margin-bottom: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
 
+.subitem h3{
+    font-size: 3em;
+}
 picture {
     width: 5em;
     height: 5em;
