--- a/Skills/styles.css
+++ b/Skills/styles.css
@@ -116,7 +116,7 @@ h2 {
 section {
     
     position: relative;
-    top: 12em;
+    top: 13em;
     
     display: flex;
     flex-direction: row;
@@ -147,7 +147,7 @@ section {
 /* end of main */
 
 /* featured */
-.featured {
+.featured h3 {
     position: relative;
     top: 15em;
     
@@ -157,6 +157,7 @@ section {
     align-items: center;
     font-size: 20px;
     color: #CBE4DE;
+    
 }
 /* End of featured */
 
@@ -165,7 +166,7 @@ section {
 .projects {
  
     position: relative;
-    top: 20em;
+    top: 15em;
 
     display: flex;
     flex-direction: column;
@@ -182,6 +183,12 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.holder {
+    display: flex;
+    flex-direction: column;
+    
 }
 /* footer */
 footer {
@@ -213,6 +220,45 @@ footer .social-icons ul li{
  footer .social-icons ul li:hover {
     color: #865DFF;
  }
+
+ @media only screen and (min-width: 768px) and (max-width: 990px) {
+    .projects {
+        flex-direction: row;
+        top: 30em;
+        gap: 8em
+        
+    }
+
+    .project-item {
+        scale: 140%;
+    }
+
+    .featured {
+        top: 8em;
+        font-size: 3em;
+    }
+ }
+
+ @media only screen and (min-width: 991px) {
+    .projects {
+        flex-direction: row;
+        top: 22em;
+        gap: 8em
+    }
+
+    .project-item {
+        scale: 140%;
+    }
+
+    .featured > h3{
+        font-size: 2em;
+        position: relative;
+        top: 9em;
+      
+    }
+ }
+
+ 
 
  
 
