--- a/styles.css
+++ b/styles.css
@@ -191,12 +191,15 @@ form {
     padding: 10px 4vw;
     width: 100%;
     background-color: #0E8388;
-    max-width: 600px;
+    width: 35em;
+    height: 18em;
     border-radius: 10px;
     position: relative;
     top: 15px;
     margin: 0 2em;
     scale: 80%;
+
+    gap: 1em;
 }
 
 
@@ -208,10 +211,14 @@ form {
  form h3 {
     margin-bottom: 0.5em;
     font-size: 2em;
+    color: #CBE4DE;
  }
 
  form input {
-    background-color: ;
+    border: 0;
+    background-color: transparent;
+    border-bottom: 1px solid #865DFF
+
  }
 
  
