--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@ form {
  footer {
     position: fixed;
     bottom: 15px;
+   
  }
 
  form h3 {
@@ -217,10 +218,34 @@ form {
  form input {
     border: 0;
     background-color: transparent;
-    border-bottom: 4px solid #865DFF
+    border-bottom: 4px solid #865DFF;
 
  }
 
+ form textarea {
+    background-color: transparent;
+    border: 0;
+    border-bottom: 4px solid #865DFF;
+    
+ }
+
+ form button {
+    background-color: #CBE4DE;
+    border-radius: 10px;
+    color: #2E4F4F;
+    transition: all 0.3s ease 0s;
+ }
+
+ form::placeholder {
+    color: red;
+    opacity: 1;
+ }
+
+ form button:hover {
+    background-color: #865DFF;
+ }
+
+ 
  
 
 
@@ -257,6 +282,10 @@ form {
 @media only screen and (min-width:991px) {
     article div p {
         font-size: 24px;
+     }
+
+     form input {
+        font-size:15px;
      }
     
 }
