--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,12 @@ body {
     background-repeat: no-repeat;
     background-size: 660%;
     background-position-y: 100px;
+    height: 100vh;
 }
 
 header {
     font-family: 'Montserrat', sans-serif;
     width: 100%;
-    
     position: fixed;
     z-index: 12;
 
@@ -159,13 +159,23 @@ article div p:hover {
     color: #865DFF;
 }
 
+footer {
+    width: 100vw;
+    display: flex;
+    
+    justify-content: center;
+    position: relative;
+    top: 8em;
 
-.social-icons ul li{
-    display: inline-flex;
-    scale: 170%;
-    padding: 0 10px;
 }
 
+footer ul {
+    display: flex;
+    justify-content: center;
+    scale: 200%;
+    
+    
+}
 
 
 
@@ -189,25 +199,20 @@ form {
     flex-direction: column;
     justify-content: center;
     padding: 10px 4vw;
-    width: 100%;
+   
     background-color: #0E8388;
     width: 35em;
     height: 18em;
     border-radius: 10px;
-    position: relative;
-    top: 15px;
     margin: 0 2em;
     scale: 80%;
-
     gap: 1em;
+
+ 
 }
 
 
- footer {
-    position: fixed;
-    bottom: 15px;
-   
- }
+ 
 
  form h3 {
     margin-bottom: 0.5em;
@@ -243,6 +248,12 @@ form {
 
  form button:hover {
     background-color: #865DFF;
+ }
+
+ .main {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
  }
 
  
