--- a/about-page/styles.css
+++ b/about-page/styles.css
@@ -8,18 +8,17 @@ html {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    text-decoration: none;
     list-style: none;
+    font-family: sans-serif;
 
     
 }
 
 body {
-    background-image: url(images/liquid-cheese.svg);
+    background-image: url(../images/liquid-cheese.svg);
     background-repeat: no-repeat;
-    background-size: 660%;
-    background-position-y: 100px;
-    background-color: #0E8388;
+    background-size: 500%;
+    background-attachment: fixed;
 }
 
 header {
@@ -63,12 +62,20 @@ label.logo:hover {
     justify-content: space-evenly;
     background-color: #2E4F4F;
     align-items: center;
+    transition: all 0.9s ease 0s;
+    cursor: pointer;
     
+}
+
+.menu-container:hover {
+    background-color: #19A7CE;
 }
 
 .menu-container li {
     display: inline-block;
 }
+
+
 
 ul li a {
     margin: 0 10px;
@@ -77,119 +84,421 @@ ul li a {
     transition: all 0.3s ease 0s;
 }
 
-ul li a:hover {
-    color:#865DFF
-}
+
 
 #about {
     color:#865DFF;
 }
 
 /* Section */
-
-.title-container {
-    width: 100%;
-    height: 300px;
-    background-image: url(../images/Aboutme-bg.jpg);
-    background-position-y: 750px;
-    background-position-x: -300px;
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 25em;
+    align-items: center;
+}
+picture {
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-top: 0px;
-    
-}
-
-.title {
-    color: #CBE4DE;
-    font-size: 3em;
-    transition: all 0.3s ease 0s;
-}
-
-.title:hover {
-    color: deepskyblue;
-    font-size: 4em;
-}
-
-.art-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 20px;
-    color:#CBE4DE;
-    font-size: 20px;
     position: relative;
-    top: 60px;
+    bottom: 3em;
+}
+picture img{
+    width: 70%;
+    height: auto;
+    border-radius: 50%;
+    background-color: #19A7CE;
     transition: all 0.3s ease 0s;
-    
-    
-    
-    
+
 }
 
-.paragraph {
-    font-family: 'Montserrat', sans-serif;
-    transition: all 0.3s ease 0s;
-    
+picture img:hover {
+    background-color: #865DFF;
 }
 
-.art-container:hover {
+
+.head-section {
+    display: flex;
+    flex-direction: column;
+    gap: 4em;
+    position: relative;
+    top: 14em;
+    padding-left: 1em;
+    margin-bottom: 2em;
+}
+
+section .head-line {
+    font-size: 2.8em;
+    color: whitesmoke;
+}
+
+section .head-line .luis {
+    color: #19A7CE;
+}
+
+section .head-line .country {
+    border-bottom: 4px solid #19A7CE;
+}
+
+.about-title-container {
+    display: flex;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+}
+
+.fa-user {
+    color: #19A7CE;
+    font-size: 1.5em;
+    order: 0;
+}
+
+article {
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5em;
+    margin: 1em;
+    margin-bottom: 5em;
+
+}
+article h1 {
+    color: #19A7CE;
+    font-size: 3em;
+    text-align: center;
+    text-shadow: 5px 3px #2E4F4F;
+    transition: all 0.3s ease 0s;
+    order: 1;
+}
+
+article h1:hover {
+    color: #865DFF;
+}
+article p {
+    padding: 1em;
+    font-size: 1.3em;
+    color: #CBE4DE;
+    margin-top: 2em;
+    background-color: #0E8388;
+    border-radius: 15px;
+    margin: 1em 1em;
+}
+
+.skills-section {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 5em;
+    padding-bottom: 5em;
+}
+
+.skills-section h1 {
+    color: #19A7CE;
+    font-size: 3em;
+    text-shadow: 5px 3px #2E4F4F;
+    transition: all 0.3s ease 0s;
+}
+
+.skills-section h1:hover {
     color: #865DFF;
 }
 
-/* content */
-.section-container {
-    display: grid;
+.skills-section picture {
+    width: 160px;
+    height: 160px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+}
+
+.skills-section ul {
+    display: flex;
+    flex-direction: row;
+    gap: 2em;
+    flex-wrap: wrap;
+    margin: 0 1em;
+    justify-content: center;
+}
+
+.skills-section picture i {
+    font-size: 11em;
+}
+.fa-html5 {
+    color: #f16528;
+}
+.fa-css3-alt {
+    color: #244ee6;
+}
+
+.fa-square-js {
+    color: #f0db4f;
+}
+
+.featured-projects {
+    
     position: relative;
-    top: 80px;
+    bottom: 27em;
 
-    grid-template-columns: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 5em;
 }
 
-
-
-video {
-    border-radius: 15px;
+.featured-title-container {
+    display: flex;
+    gap: 0.5em;
+    flex-direction: row;
+    align-items: center;
 }
 
-
-
-
-
-
-
-/* Tablet Screens */
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-    .section-container {
-        scale: 140%;
-    }
-
-    .art-container {
-        top: 20px;
-    }
+.fa-diagram-project {
+    font-size: 1em;
+    color: #19A7CE;
+    order: -1;
 }
 
-/* computers */
-@media screen and (min-width: 1280px) {
-    .section-container {
-        scale: 170%;
-        right: 300px;
-        top: -20px;
-        padding-bottom: 7em;
+.featured-projects h1 {
+    color: #19A7CE;
+    font-size: 2em;
+    text-shadow: 5px 3px #2E4F4F;
+}
+.featured-projects ul li picture {
+    width: 300px;
+    height: 150px;
+    background-color: red;
+}
+
+.featured-projects ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+}
+
+.featured-projects ul li {
+    display: flex;
+    flex-direction: column;
+    gap: 3.4em;
+    text-align: center;
+    color: #CBE4DE;
+}
+
+.featured-projects h4 {
+    font-size: 2em;
+}
+
+/* footer */
+footer {
+    position: fixed;
+    width: 100vw;
+    height: 4vh;
+    bottom: 0px;
+    background-color: #2E4F4F;
+}
+
+footer ul {
+    display: flex;
+    justify-content: center;
+    
+    gap: 2em;
+}
+
+footer ul li i{
+    scale: 150%;
+    position: relative;
+    top: 10px;
+    color: #CBE4DE;
+    transition: all 0.3s ease 0s;
+}
+
+footer ul li i:hover {
+    color: #865DFF;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 990px) {
+    main {
+        gap: 20em;
+    }
+    .head-section {
+        display: flex;
+        flex-direction: row;
+        gap: 4em;
+        margin-top: 7em;
+        margin-bottom: 5em;
+
+    }
+     
+    picture {
+        order: 1;
+        scale: 130%;
     }
 
-    .art-container {
-        text-align: left;
-        top: 125px;
-        scale: 120%;
-        width: 350px;
-        left: 800px;
-        background-color: rgba(5, 9, 8, 0.249);
-        padding: 1em;
-        border-radius: 10px;
-        height: auto;
-        margin-left: 10em;
+    .article-container {
+        
+        display: flex;
+        flex-direction: column;
+        gap: 10em;
+        justify-content: center;
+        align-items: center;
     }
+
+    article {
+        display: flex;
+        justify-content: center;
+        width: 100vw;
+        align-items: center;
+    }
+
+    article p {
+        width: 70vw;
+    }
+
+    .skills-section ul {
+        gap: 5em;
+
+    }
+
+    .skills-section {
+        gap: 8em;
+        margin-bottom: 10em;
+    }
+
+    .featured-projects ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 2em;
+        
+        
+    }
+    .featured-projects ul li picture {
+        width: 70px;
+        height: 150px;
+        background-color: red;
+        
+    }
+
+    .featured-projects h4 {
+        font-size: 2em;
+    }
+
+    .featured-projects ul li {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5em;
+    }
+
+
+    
+}
+
+@media only screen and (min-width:991px) {
+
+    body {
+        background-size: 100%;
+    }
+    
+    article {
+        width: 50vw;
+        padding-bottom: 10em;
+        gap: 8em;
+    }
+
+    .head-section .head-line .country {
+        border-bottom: 7px solid #19A7CE;
+    }
+
+    .head-section .head-line {
+        font-size: 6em;
+        padding-left: 1em;
+    }
+
+    .head-section {
+        display: flex;
+        flex-direction: row;
+        gap: 20em;
+        width: 100vw;
+        align-items: center;
+        margin-bottom: 3em;
+        
+    }
+     
+    picture {
+        order: 1;
+        scale: 180%;
+        margin-top: 7em;
+        
+    }
+
+    main {
+        gap: 30em;
+    }
+
+    article {
+        display: flex;
+        justify-content: center;
+        width: 100vw;
+        align-items: center;
+    }
+
+    article h1 {
+        font-size: 7em;
+        
+    }
+
+    article p {
+        font-size: 2em;
+        width: 70vw;
+    }
+
+    .skills-section h1 {
+        font-size: 5em;
+    }
+    .skills-section ul {
+        gap: 17em;
+    }
+
+    footer {
+        height: 7vh;
+    }
+    
+    footer ul {
+        gap: 4em;
+    }
+    
+    footer ul li i{
+        scale: 180%;
+        position: relative;
+        top: 17px;
+        color: #CBE4DE;
+        transition: all 0.3s ease 0s;
+    }
+
+    .featured-projects ul {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 25em;
+    }
+
+    .featured-projects {
+        margin: 5px 10em;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .featured-title-container {
+        font-size: 3em;
+    }
+
+    .featured-projects ul li picture {
+        width: 200px;
+        height: 200px;
+        background-color: red;
+    }
+
 }
