--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&family=Montserrat:wght@500&family=Oswald&display=swap');
 
 html {
-    scroll-behavior: smooth;
-    
+    scroll-behavior:smooth;
 }
 *{
     box-sizing: border-box;
@@ -16,9 +15,9 @@ html {
 body {
     background-image: url(images/liquid-cheese.svg);
     background-repeat: no-repeat;
-    background-size: 660%;
-    background-position-y: 100px;
-    height: 100vh;
+    background-size: 450%;
+    background-attachment: fixed;
+    
 }
 
 header {
@@ -165,7 +164,7 @@ footer {
     
     justify-content: center;
     position: relative;
-    top: 8em;
+    top: 15em;
 
 }
 
@@ -173,42 +172,34 @@ footer ul {
     display: flex;
     justify-content: center;
     scale: 200%;
+    margin-bottom: 20px;
     
     
 }
 
 
 
-.form {
-   
-    width: 100vw;
-    height: 30vh;
-    position: relative;
-    top: 8em;
 
-    display: flex;
-    justify-content: center;
-    
-   
-    
-}
 
 form {
     font-family: sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
     padding: 10px 4vw;
-   
     background-color: #0E8388;
-    width: 35em;
-    height: 18em;
+    
     border-radius: 10px;
     margin: 0 2em;
-    scale: 80%;
+    
     gap: 1em;
 
- 
+    width: 70vw;
+    height: 40vh;
+    position: relative;
+    top: 13em;
+
 }
 
 
@@ -253,7 +244,7 @@ form {
  .main {
     display: flex;
     flex-direction: column;
-    gap: 2em;
+    align-items: center;
  }
 
  
@@ -262,6 +253,10 @@ form {
 
 /* Tablet Reso */
 @media only screen and (min-width: 768px) and (max-width: 990px) {
+
+        body {
+            background-size: 280%;
+        }
          .hero-container {
             flex-direction: row;
             
@@ -286,11 +281,24 @@ form {
          .form {
             justify-content: flex-end;
             padding-bottom: 4em;
+            position: relative;
+            top: 10em;
+         }
+
+         footer ul {
+            position: relative;
+            top: 7em;
          }
 }
 
 
+
+
 @media only screen and (min-width:991px) {
+
+    body {
+        background-size: 100%;
+    }
     article div p {
         font-size: 24px;
      }
@@ -298,5 +306,14 @@ form {
      form input {
         font-size:15px;
      }
+
+     form {
+        margin-bottom: 5em;
+        height: 23em;
+       
+     }
     
+     footer {
+        bottom: 1em;
+     }
 }
